// USER
Enum SubscriptionPlan {
  free
  premium
}
Enum Gender {
  man
  woman
  other
}

Table User {
  uid string [primary key]

  email string [unique, not null]
  password string [not null]

  verified boolean [default: false]
  subscriptionPlan SubscriptionPlan [default: "free"]

  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null, default: `now()`]
}

Table UserInfo {
  userUid string [primary key]

  firstName string [not null]
  lastName string [not null]

  avatarUrl string

  birthdate datetime
  gender Gender

  updatedAt datetime [not null, default: `now()`]
}

Table UserPreferences {
  userUid string [primary key]

  openToFriendRequests boolean [default: true]

  // Mail notification
  promotionEmails boolean [default: false]
  newMessageEmails boolean [default: true]
  newFriendRequestEmails boolean [default: true]

  updatedAt datetime [not null, default: `now()`]
}

Table VerificationCode {
  userUid string pk [not null]

  code string pk [not null]

  createdAt datetime [not null, default: `now()`]
  expiresAt datetime [not null]
  usedAt datetime
}

Ref: UserInfo.userUid - User.uid
Ref: UserPreferences.userUid - User.uid
Ref: VerificationCode.userUid - User.uid
